# minecraft-docker

./: .dockerignore  .gitignore  Dockerfile  README.md  console.sh  docker-compose.yaml  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  remote_console.py  set_properties.py  template.env
console/: __main__.py  spinner.py
console/app/: __main__.py  spinner.py  styled_string.py  utils.py
server/: Dockerfile  send.sh  start.sh  stop.sh
server/data/: .gitkeep
tools/: __main__.py  environment.py  utils.py
tools/scripts/: console.sh  start-server.sh
