[tool.poetry]
name = "minecraft-docker"
version = "2.0.0"
description = "Docker wrapper for minecraft server"
authors = ["Tomasz Kordiak <dotomika@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "2.7.1"
rich = "13.9.4"

[tool.poetry.group.dev.dependencies]
ruff = "0.9.3"

[tool.poetry.group.console.dependencies]
rcon = "2.4.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["RUF", "I", "F"]
